# piglet

./: Cargo.toml  README.md  flake.nix
piglet/: Cargo.toml
piglet/src/: lib.rs
piglet_client/: Cargo.toml
piglet_client/src/: client.rs  connection.rs  dynamic_object.rs  lib.rs  object_address.rs  values.rs
piglet_generated/: Cargo.toml
piglet_generated/src/: lib.rs  nimbus_hd_1_0.rs  traits.rs
piglet_generated/src/nimbus_hd_1_0/: nimbus_core.rs  nimbus_core_barcode_scanner_0.rs  nimbus_core_barcode_scanner_0_barcode_module_cpu.rs  nimbus_core_barcode_scanner_0_illumination.rs  nimbus_core_boanduz_can.rs  nimbus_core_calibration.rs  nimbus_core_channel.rs  nimbus_core_channel_coord.rs  nimbus_core_configuration.rs  nimbus_core_cpu.rs  nimbus_core_dac_0.rs  nimbus_core_dac_0_axisa.rs  nimbus_core_dac_0_axisa_axisconfiga.rs  nimbus_core_dac_0_axisa_filtera.rs  nimbus_core_dac_0_axisa_pwma.rs  nimbus_core_dac_0_axisb.rs  nimbus_core_dac_0_axisb_axisconfigb.rs  nimbus_core_dac_0_axisb_filterb.rs  nimbus_core_dac_0_axisb_pwmb.rs  nimbus_core_dac_0_cpu.rs  nimbus_core_dac_0_gpio.rs  nimbus_core_door_lock.rs  nimbus_core_ethernet.rs  nimbus_core_gantry_scanner.rs  nimbus_core_global_objects.rs  nimbus_core_gripper.rs  nimbus_core_gripper_teach.rs  nimbus_core_gripper_xy_coord.rs  nimbus_core_hd_deck.rs  nimbus_core_io_board.rs  nimbus_core_io_board_cpu.rs  nimbus_core_io_board_deck.rs  nimbus_core_io_board_display_board.rs  nimbus_core_io_board_external_power_supply.rs  nimbus_core_io_board_indicator_buttons.rs  nimbus_core_io_board_io_board_service.rs  (+16 more)
(+3 files in other folders)
