[package]
name = "piglet_client"
description = "A bare-bones client for controlling IP-based Hamilton robots"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/escalante-bio/piglet"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
