[package]
name = "piglet_generated"
description = "Generated API code for IP-based Hamilton robots"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/escalante-bio/piglet"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
piglet_client = { path = "../piglet_client", version = "0.3.0" }
